feature button and dropdown

--- a/src/assets/styles/theme.scss
+++ b/src/assets/styles/theme.scss
@@ -2,4 +2,5 @@
 
 $app-primaryColor: #18406f;
 $app-secondaryColor: #095192;
-$app-bgColor: #ffffff;
+$app-bgColor: #fafafa;
+$app-bgWhite: #ffffff;
