--- a/src/components/customButton/customButton.scss
+++ b/src/components/customButton/customButton.scss
@@ -2,6 +2,7 @@
 
 .custom-button {
   font-family: $app-fontFamily;
+  font-size: 14px;
   &:focus {
     box-shadow: none;
     border: none;
@@ -9,20 +10,24 @@
 }
 .primary-button {
   background-color: $app-secondaryColor;
-  color: white;
+  color: $app-bgWhite;
   border-radius: 4px;
   border: none;
-  padding: 14px 40px;
+  padding: 12px;
 }
 
 .primary-outline {
-  background-color: white;
+  background-color: $app-bgWhite;
   border-radius: 4px;
-  padding: 14px 40px;
-  color: $app-primaryColor;
-  border: 1px solid $app-primaryColor;
-  &:focus {
-    border: 1px solid $app-primaryColor;
+  padding: 12px;
+  color: $app-secondaryColor;
+  border: 1px solid $app-secondaryColor;
+  &:hover {
+    background-color: #d3eaff;
+    border: none;
+    span {
+      text-decoration: none;
+    }
   }
 }
 
@@ -37,7 +42,15 @@
 }
 
 .button-image {
-  margin-right: 8px;
-  width: 20px;
-  height: 20px;
+  margin-right: 4px;
+  width: 15px;
+  height: 15px;
+}
+
+.primary-button-image {
+  background-color: $app-secondaryColor;
+  color: $app-bgWhite;
+  border-radius: 4px;
+  border: none;
+  padding: 12px;
 }
