--- a/src/components/customInput/customInput.scss
+++ b/src/components/customInput/customInput.scss
@@ -1,14 +1,14 @@
 @import "../../assets/styles/theme.scss";
 
 .custom-input {
-  border-color: $app-borderColor;
+  border-color: var(--app-borderColor);
   width: 100%;
   border-radius: 0;
   font-size: 12px;
   font-weight: 400;
 
   &:focus {
-    border-color: $app-borderColor;
+    border-color: var(--app-borderColor);
     box-shadow: none;
   }
 }
