--- a/src/assets/styles/theme.scss
+++ b/src/assets/styles/theme.scss
@@ -1,7 +1,9 @@
 @import "./variable.scss";
 
-$app-primaryColor: #18406f;
-$app-secondaryColor: #095192;
-$app-bgColor: #fafafa;
-$app-bgWhite: #ffffff;
-$app-borderColor: #e0e0e0;
+:root {
+  --app-primaryColor: #18406f;
+  --app-secondaryColor: #095192;
+  --app-bgColor: #fafafa;
+  --app-bgWhite: #ffffff;
+  --app-borderColor: #e0e0e0;
+}
