--- a/src/components/customDropdown/customDropdown.scss
+++ b/src/components/customDropdown/customDropdown.scss
@@ -2,7 +2,7 @@
 
 .dropdown {
   width: 100%;
-  border-color: $app-borderColor;
+  border-color: var(--app-borderColor);
   box-shadow: none;
   border-radius: 0;
   span {
@@ -14,6 +14,6 @@
   }
 
   &:focus {
-    border-color: $app-borderColor;
+    border-color: var(--app-borderColor);
   }
 }
