feature contrct upload popup

--- a/src/assets/styles/theme.scss
+++ b/src/assets/styles/theme.scss
@@ -4,3 +4,4 @@ $app-primaryColor: #18406f;
 $app-secondaryColor: #095192;
 $app-bgColor: #fafafa;
 $app-bgWhite: #ffffff;
+$app-borderColor: #e0e0e0;
