Ui of Contract explorer

--- a/src/assets/styles/theme.scss
+++ b/src/assets/styles/theme.scss
@@ -6,4 +6,10 @@
   --app-bgColor: #fafafa;
   --app-bgWhite: #ffffff;
   --app-borderColor: #e0e0e0;
+  --app-successColor: #00a991;
+  --app-dangerColor: #d9342b;
+  --app-warningColor: #cc8925;
+  --app-dark: #000000;
+  --app-dark-100: #25282a;
+  --app-light: #d3eaff;
 }
