--- a/src/components/table/appTable.scss
+++ b/src/components/table/appTable.scss
@@ -22,7 +22,7 @@
   min-width: 28px;
 }
 
-.view-details {
+.extra-data {
   border-bottom: 1px solid var(--app-borderColor);
   padding: 14px 16px;
   font-size: 14px;
@@ -31,7 +31,7 @@
   cursor: pointer;
 }
 
-.view-details:hover {
+.extra-data:hover {
   text-decoration: underline;
 }
 
@@ -56,11 +56,11 @@
   font-size: 14px;
 }
 
-.view-details-txt {
+.extra-data-txt {
   font-weight: 600;
 }
 
-.trash {
+.icon {
   color: var(--app-dangerColor);
 }
 .cell-border {
