--- a/src/pages/viewDetails/viewDetails.scss
+++ b/src/pages/viewDetails/viewDetails.scss
@@ -1,13 +1,20 @@
 .container {
-  // height: 89%;
-
   .chat {
-    height: 86.6%;
+    height: 88%;
 
     .chat-content {
       height: 90%;
       overflow: scroll;
     }
+  }
+  .chat-footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+  }
+
+  .pdf-viewer {
+    height: 90%;
   }
 }
 
