feature file upload and custom popup

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,7 +1,8 @@
 @import "./assets/styles/theme.scss";
+
 body {
   margin: 0;
-  font-family: "Inter";
+  font-family: var(--app-fontFamily);
   font-weight: normal;
 }
 
