--- a/src/components/customButton/customButton.scss
+++ b/src/components/customButton/customButton.scss
@@ -1,7 +1,5 @@
-@import "../../assets/styles/theme.scss";
-
 .custom-button {
-  font-family: $app-fontFamily;
+  font-family: var(--app-fontFamily);
   font-size: 14px;
   &:focus {
     box-shadow: none;
