--- a/src/components/customDialog/customDialog.scss
+++ b/src/components/customDialog/customDialog.scss
@@ -1,8 +1,6 @@
-.custom-dialog {
-  .custom-header {
-    font-size: 16px;
-    font-weight: 700;
-    color: var(--ap-dark-100);
-    border-bottom: 1px solid var(--app-borderColor) !important;
-  }
+.custom-header {
+  font-size: 16px;
+  font-weight: 700;
+  color: var(--app-dark-100);
+  border-bottom: 1px solid var(--app-borderColor) !important;
 }
