--- a/src/components/customInput/customInput.scss
+++ b/src/components/customInput/customInput.scss
@@ -3,7 +3,7 @@
 .custom-input {
   border-color: var(--app-borderColor);
   width: 100%;
-  border-radius: 0;
+  border-radius: 4px;
   font-size: 12px;
   font-weight: 400;
 
