--- a/src/components/customDropdown/customDropdown.scss
+++ b/src/components/customDropdown/customDropdown.scss
@@ -4,16 +4,18 @@
   width: 100%;
   border-color: var(--app-borderColor);
   box-shadow: none;
-  border-radius: 0;
+  border-radius: 4px;
   span {
     font-size: 12px;
     font-weight: 400;
   }
-  li {
-    font-size: 14px;
-  }
-
   &:focus {
     border-color: var(--app-borderColor);
   }
+}
+
+.item-label {
+  font-size: 12px;
+  font-weight: 400;
+  color: var(--app-dark-100);
 }
