feature upload contract form

--- a/src/components/contractUpload/contractupload.scss
+++ b/src/components/contractUpload/contractupload.scss
@@ -1,6 +1,4 @@
-.contract-input {
-  border: 1px solid;
-  border-left: none !important;
-  padding: 3px;
-  border-top-left-radius: 0px !important;
+.error-card {
+  color: var(--app-dangerColor);
+  padding-left: 16px;
 }
